# SpeedDial

./: .gitignore  README.md  RESTauth.py  auth_thread.py  client_secret.json  config.py  firestore_key.py  meetings.db  run.py
SpeedDialV1/: main.py  pyproject.toml
app/: __init__.py  fernetkeygen.py  main_window.py  secret.key  serverside.py  socketiovideo.py  speeddial-f2572-firebase-adminsdk-fbsvc-19fdde59c7.json  ui_main.py  video_audio_manager.py
app/resources/: style.qss
tests/: test_main.py
