[project]
name = "speeddialv1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eventlet>=0.40.2",
    "fastapi>=0.116.1",
    "firebase>=4.0.1",
    "firebase-admin>=7.0.0",
    "flask>=3.1.1",
    "flask-socketio>=5.5.1",
    "google-auth-oauthlib>=1.2.2",
    "opencv-python>=4.12.0.88",
    "pyaudio>=0.2.14",
    "pyqt6>=6.9.1",
    "pyside6>=6.9.1",
    "python-dotenv>=1.1.1",
]
